# log4daily

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Documentation.md  README.md  SECURITY.md  install.sh
.github/workflows/: cmake-single-platform.yml  codacy.yml
app/: applicationManager.cpp  applicationManager.h  handlers.cpp  handlers.h  inputHandlers.cpp  inputHandlers.h  localStorage.cpp  main.cpp  mainThread.cpp  mainThread.h  main_thread.cpp  manageConfig.cpp  renderUI.cpp  structures.cpp  tests.cpp  uiRenderer.cpp  uiRenderer.h
app/Headers/: applicationManager.h  uiRenderer.h
app/Headers/Interface/: diaryComponent.h  exitComponent.h  milestonesComponent.h  todosComponent.h
app/Headers/Storage/: localStorage.h  manageConfig.h
app/Interface/: aboutComponent.cpp  aboutComponent.h  diaryComponent.cpp  diaryComponent.h  exitComponent.cpp  exitComponent.h  milestonesComponent.cpp  todosComponent.cpp  todosComponent.h
app/Source/: applicationManager.cpp  inputHandlers.cpp  main.cpp  uiRenderer.cpp
app/Source/Interface/: diaryComponent.cpp  exitComponent.cpp  milestonesComponent.cpp  todosComponent.cpp
app/Source/Storage/: localStorage.cpp  manageConfig.cpp
app/Storage/: localStorage.cpp  localStorage.h  manageConfig.cpp
app/UIComponents/: aboutComponent.cpp  createComponent.cpp  diaryComponent.cpp  milestonesComponent.cpp  milestonesComponent.h  todosComponent.cpp  todosComponent.h
docs/: handlers.md  localStorage.md  mainThread.md  renderUI.md
docs/UIComponents/: othersComponents.md  todosComponent.md
